fix: more options hidden by default

--- a/styles/index.css
+++ b/styles/index.css
@@ -44,7 +44,7 @@ nav {
     cursor:pointer;
 }
 .more-options-wrapper {
-    display: flex;
+    display: none;
     position:absolute;
     flex-direction: column;
     top:55px;
